@@ -555,9 +555,7 @@ ot_pyinstallcheck_test (Poisson_std)
 ot_pyinstallcheck_test (PoissonFactory_std)
 ot_pyinstallcheck_test (PosteriorDistribution_std)
 ot_pyinstallcheck_test (ProductDistribution_std)
-if (Ceres_FOUND OR CMinpack_FOUND)
 ot_pyinstallcheck_test (QuantileMatchingFactory_std IGNOREOUT)
-endif ()
 ot_pyinstallcheck_test (RandomMixture_std)
 ot_pyinstallcheck_test (RandomMixture_simplification)
 ot_pyinstallcheck_test (RandomMixture_grid1d)
